# Proyecto_Ob

./: README.md  desdecero.ipynb  pyproject.toml
