[tool.poetry]
name = "proyecto-ob"
version = "0.1.0"
description = ""
authors = ["Juan <juanavila9905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
